sas-core/main/default/objects/Customer__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <inlineHelpText>It is the Liability or Customer claim to which this customer is related to</inlineHelpText>
    <label>Claim</label>
    <referenceTo>LIA_Claim__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>