sas-core/main/default/objects/Customer__c/fields/Customer_Claim__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Claim</label>
    <referenceTo>Customer_Claim__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>