sas-core/main/default/objects/Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the customer</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>